fixed weird margins + flex alignment

--- a/style.css
+++ b/style.css
@@ -16,6 +16,15 @@
     box-sizing:border-box;
 }
 
+html,
+body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    /* Prevent horizontal overflow */
+}
+
 body {
     font-family: jungka, Arial, Helvetica, sans-serif;
     font-weight: normal;
@@ -30,9 +39,9 @@ body {
 /* originally i had these set as grid and that somehow made the width fixed when the browser was narrow */
 body, .container {
     display:flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    justify-items: center;
+    flex-flow: column wrap;
+    align-content: center;
+    
 }
 
 .container {
@@ -184,13 +193,16 @@ underline {
 
 /* MEDIA QUERIES */
 @media (max-width: 1000px) {
-    body {
-        padding: .5em;
-    }
 
     /* Ensure single column layout on small screens */
     .row2 {
         grid-template-columns: 1fr;
         row-gap:1em;
     }
+}
+
+@media (max-width: 700px) {
+    body {
+            padding: .5em;
+        }
 }
